<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.chen.naoc.ControlActivity">


    <Button
        android:id="@+id/btCtrlForward"
        android:text="@string/btCtrlForward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btCtrlBackward"
        android:text="@string/btCtrlBackward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btCtrlLeft"
        android:text="@string/btCtrlLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btCtrlRight"
        android:text="@string/btCtrlRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>
